# AI-architecture

./: .gitignore  LICENSE  README.md
AI_mcp_server/: CURSOR_MIGRATION_SUMMARY.md  CURSOR_SETUP.md  LICENSE  README.md  claude_desktop_config.json  cursor_mcp_config.json  mcp_config.json  pyproject.toml  run_server.py  start_server.bat  start_server.sh
AI_mcp_server/docs/: cursor-integration-guide.md  installation.md  quick-start-guide.md  user-guide.md
AI_mcp_server/examples/: basic_usage.py
AI_mcp_server/src/ai_mcp_server/: __init__.py  main.py
AI_mcp_server/src/ai_mcp_server/bridges/: __init__.py  base_bridge.py  grasshopper_bridge.py  rhino_bridge.py
AI_mcp_server/src/ai_mcp_server/core/: __init__.py  config.py  server.py
AI_mcp_server/src/ai_mcp_server/tools/: __init__.py  grasshopper_tools.py  rhino_tools.py  unified_tools.py
